--- a/ASP_HW_2/wwwroot/index.html
+++ b/ASP_HW_2/wwwroot/index.html
@@ -8,87 +8,17 @@
 </head>
 <body class="bg-secondary">
 
-    <!--<div>
-    <form class="d-flex border border-danger rounded mb-2 p-3 align-items-center bg-white" id="editForm" name="editForm" method="post">
-        <div class="w-50 d-flex flex-column mr-2">-->
-            <!--@if (@Model != null)
-            {-->
-            <!--<img class="w-100 p-4" src="" />-->
-            <!--}-->
-            <!--<div class="d-flex justify-content-between w-100">
-                <label for="imageUrl">Image url</label>
-                <input type="text" name="imgeUrl" id="imageUrl" class="w-75"/>-->
-                <!--@Html.LabelFor(x => x.ImageUrl)
-                @Html.TextBoxFor(x => x.ImageUrl, new {@class="w-75"})-->
+    <div class="d-flex justify-content-center my-3 text-light ">
+        <div id="loginForm" class="p-2 border rounded border-danger">
+            <label for="login">Login: </label>
+            <input type="text" id="login" />
 
-            <!--</div>
+            <label for="password">Password: </label>
+            <input type="text" id="password" />
+
+            <button id="loginButton" class="btn btn-light">Login</button>
         </div>
-
-        <div class="w-50 d-flex flex-column align-items-center">
-            <div class="bg-dark text-light w-100 text-center rounded border mb-2">Info</div>
-            <div class="d-flex justify-content-between w-100">
-                <label for="popularity">Popularity:</label>
-                <select id="popularity" name="Popularity" class="w-50">
-                    <option value="0">One</option>
-                    <option value="1">Two</option>
-                    <option value="2">Three</option>
-                    <option value="3">Four</option>
-                    <option value="4">Five</option>
-                </select>
-            </div>
-
-            <div class="d-flex flex-column w-100">
-                <div class="d-flex justify-content-between inputs-container">
-                    <label for="model">Model: </label>
-                    <input type="text" name="model" class="w-50" id="model" />
-
-                </div>
-                <div id="validMsgModel">
-
-                </div>
-
-            </div>
-            <div class="d-flex flex-column w-100">
-                <div class="d-flex justify-content-between inputs-container">
-                    <label for="price">Price: </label>
-                    <input type="number" name="price" class="w-50" id="price" />
-                </div>
-                <div id="validMsgPrice">
-
-                </div>
-            </div>
-            <div class="bg-dark text-light w-100 text-center rounded border my-2">Details</div>
-            <div class="d-flex flex-column w-100">
-                <div class="d-flex justify-content-between inputs-container">
-                    <label for="company">Company: </label>
-                    <input type="text" name="company" class="w-50" id="company" />
-                </div>
-                <div id="validMsgCompany">
-
-                </div>
-            </div>
-            <div class="d-flex flex-column w-100">
-                <div class="d-flex justify-content-between inputs-container">
-                    <label for="year">Year: </label>
-                    <input type="number" name="year" class="w-50" id="year" />
-                </div>
-                <div id="validMsgYear">
-
-                </div>
-            </div>
-            <div class="d-flex flex-column pb-2 w-100">
-                <div class="d-flex justify-content-between inputs-container">
-                    <label for="country">Country: </label>
-                    <input type="text" name="country" class="w-50" id="country" />
-                </div>
-                <div id="validMsgCountry">
-
-                </div>
-            </div>
-        </div>
-    </form>
-    <input form="editForm" class="w-100" type="submit" value="Save" id="save" />
-    </div>-->
+    </div>
 
     <div class="d-flex justify-content-center my-2">
         <button class="btn btn-light" id="add">Add new item</button>
